refactor: 테스트 클래스에 중첩 클래스를 추가, 테스트 구분되게 개선