@@ -2,13 +2,12 @@ package com.loopers.domain.point;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.verify;
 
 import java.util.List;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -17,7 +16,6 @@ import org.springframework.test.context.bean.override.mockito.MockitoSpyBean;
 import com.loopers.application.user.UserFacade;
 import com.loopers.application.user.UserInfo;
 import com.loopers.application.user.UserRegisterCommand;
-import com.loopers.domain.user.Gender;
 import com.loopers.fixtures.PointTestFixture;
 import com.loopers.fixtures.UserTestFixture;
 import com.loopers.support.error.CoreException;
@@ -28,7 +26,8 @@ import com.loopers.utils.DatabaseCleanUp;
  * @since 2025. 10. 29.
  */
 @SpringBootTest
-public class PointServiceIntegrationTest {
+@DisplayName("PointService 통합 테스트")
+class PointServiceIntegrationTest {
 
     @Autowired
     private PointService pointService;
@@ -47,74 +46,84 @@ public class PointServiceIntegrationTest {
         databaseCleanUp.truncateAllTables();
     }
 
-    @Test
-    @DisplayName("사용자 등록 시 포인트가 자동으로 생성및 포인트 조회 여부를 확인한다.")
-    void get_point_when_user_exists() {
-        // given
-        UserRegisterCommand command = UserTestFixture.createDefaultUserCommand();
-        UserInfo userInfo = userFacade.registerUser(command);
+    @Nested
+    @DisplayName("포인트 조회")
+    class GetPointTest {
 
-        // when
-        PointEntity point = pointService.getByUsername(userInfo.username());
+        @Test
+        @DisplayName("사용자 등록 시 포인트가 자동으로 생성되고 조회할 수 있다")
+        void get_point_when_user_exists() {
+            // given
+            UserRegisterCommand command = UserTestFixture.createDefaultUserCommand();
+            UserInfo userInfo = userFacade.registerUser(command);
 
-        // then
-        PointTestFixture.assertPointEntityValid(point, userInfo.id());
+            // when
+            PointEntity point = pointService.getByUsername(userInfo.username());
+
+            // then
+            PointTestFixture.assertPointEntityValid(point, userInfo.id());
+        }
+
+        @Test
+        @DisplayName("존재하지 않는 회원의 경우 null을 반환한다")
+        void get_point_return_null_when_user_not_exists() {
+            // when
+            PointEntity point = pointService.getByUsername(PointTestFixture.NONEXISTENT_USERNAME);
+
+            // then
+            PointTestFixture.assertPointIsNull(point);
+        }
     }
 
-    @Test
-    @DisplayName("해당 ID 의 회원이 존재하지 않을 경우, null 이 반환된다.")
-    void get_point_return_null_when_user_not_exists() {
-        // when
-        PointEntity point = pointService.getByUsername(PointTestFixture.NONEXISTENT_USERNAME);
+    @Nested
+    @DisplayName("포인트 충전")
+    class ChargePointTest {
 
-        // then
-        PointTestFixture.assertPointIsNull(point);
-    }
+        @Test
+        @DisplayName("존재하지 않는 유저 ID로 충전을 시도하면 실패한다")
+        void charge_with_nonexistent_user_fails() {
+            // when & then
+            assertThatThrownBy(() -> pointService.charge(
+                    PointTestFixture.NONEXISTENT_USERNAME,
+                    PointTestFixture.CHARGE_AMOUNT_1000))
+                    .isInstanceOf(CoreException.class)
+                    .hasMessage(PointTestFixture.ERROR_USER_NOT_FOUND);
+        }
 
-    @Test
-    @DisplayName("존재하지 않는 유저 ID 로 충전을 시도한 경우, 실패한다.")
-    void charge_with_nonexistent_user_fails() {
-        // when & then
-        assertThatThrownBy(() -> pointService.charge(
-                PointTestFixture.NONEXISTENT_USERNAME,
-                PointTestFixture.CHARGE_AMOUNT_1000))
-                .isInstanceOf(CoreException.class)
-                .hasMessage(PointTestFixture.ERROR_USER_NOT_FOUND);
-    }
+        @Test
+        @DisplayName("존재하는 유저가 1000원을 충전하면 충전된 보유 총량을 반환한다")
+        void charge_1000_returns_total_amount() {
+            // given
+            UserRegisterCommand command = UserTestFixture.createDefaultUserCommand();
+            UserInfo userInfo = userFacade.registerUser(command);
 
-    @Test
-    @DisplayName("존재하는 유저가 1000원을 충전할 경우, 충전된 보유 총량을 응답으로 반환한다.")
-    void charge_1000_returns_total_amount() {
-        // given
-        UserRegisterCommand command = UserTestFixture.createDefaultUserCommand();
-        UserInfo userInfo = userFacade.registerUser(command);
+            // when
+            java.math.BigDecimal totalAmount = pointService.charge(
+                    userInfo.username(),
+                    PointTestFixture.CHARGE_AMOUNT_1000);
 
-        // when
-        java.math.BigDecimal totalAmount = pointService.charge(
-                userInfo.username(),
-                PointTestFixture.CHARGE_AMOUNT_1000);
+            // then
+            assertThat(totalAmount).isEqualByComparingTo(PointTestFixture.CHARGE_AMOUNT_1000_SCALED);
+        }
 
-        // then
-        assertThat(totalAmount).isEqualByComparingTo(PointTestFixture.CHARGE_AMOUNT_1000_SCALED);
-    }
+        @Test
+        @DisplayName("포인트 충전 시 포인트 내역이 저장된다")
+        void charge_saves_point_history() {
+            // given
+            UserRegisterCommand command = UserTestFixture.createDefaultUserCommand();
+            UserInfo userInfo = userFacade.registerUser(command);
 
-    @Test
-    @DisplayName("포인트 충전 시, 포인트 내역이 저장된다.")
-    void charge_saves_point_history() {
-        // given
-        UserRegisterCommand command = UserTestFixture.createDefaultUserCommand();
-        UserInfo userInfo = userFacade.registerUser(command);
+            // when
+            pointService.charge(userInfo.username(), PointTestFixture.CHARGE_AMOUNT_1000);
 
-        // when
-        pointService.charge(userInfo.username(), PointTestFixture.CHARGE_AMOUNT_1000);
+            // then
+            List<PointHistoryEntity> userPointHistories = pointService.getPointHistories(userInfo.username());
+            assertThat(userPointHistories).hasSize(1);
 
-        // then
-        List<PointHistoryEntity> userPointHistories = pointService.getPointHistories(userInfo.username());
-        assertThat(userPointHistories).hasSize(1);
-
-        PointHistoryEntity history = userPointHistories.getFirst();
-        assertThat(history.getTransactionType()).isEqualTo(PointTransactionType.CHARGE);
-        assertThat(history.getAmount()).isEqualByComparingTo(PointTestFixture.CHARGE_AMOUNT_1000);
-        assertThat(history.getBalanceAfter()).isEqualByComparingTo(PointTestFixture.CHARGE_AMOUNT_1000_SCALED);
+            PointHistoryEntity history = userPointHistories.get(0);
+            assertThat(history.getTransactionType()).isEqualTo(PointTransactionType.CHARGE);
+            assertThat(history.getAmount()).isEqualByComparingTo(PointTestFixture.CHARGE_AMOUNT_1000);
+            assertThat(history.getBalanceAfter()).isEqualByComparingTo(PointTestFixture.CHARGE_AMOUNT_1000_SCALED);
+        }
     }
 }
